infrastructure/providers/aws/cloudformation/development-vpc/stack.yml
AWSTemplateFormatVersion: 2010-09-09
Description: The Development VPC.
# Metadata:
#   Instances:
#     Description:
#   Databases:
#     Description:
Parameters:
  Name:
    Type: String
    Description: Descriptive name for the VPC.
  CidrBlock:
    Type: String
    Description: CIDR address range for the entire VPC.
    AllowedPattern: ((\d{1,3})\.){3}\d{1,3}/\d{1,2}
    Default: 10.1.0.0/16
  PublicSubnet1CidrBlock:
    Type: String
    Description: Public Subnet 1
    AllowedPattern: ((\d{1,3})\.){3}\d{1,3}/\d{1,2}
  PublicSubnet2CidrBlock:
    Type: String
    Description: Public Subnet 2
    AllowedPattern: ((\d{1,3})\.){3}\d{1,3}/\d{1,2}
  PrivateSubnet1CidrBlock:
    Type: String
    Description: Private Subnet 1
    AllowedPattern: ((\d{1,3})\.){3}\d{1,3}/\d{1,2}
  PrivateSubnet2CidrBlock:
    Type: String
    Description: Private Subnet 2
    AllowedPattern: ((\d{1,3})\.){3}\d{1,3}/\d{1,2}
# Rules:
# Mappings:
# Conditions:
# Transform:
Resources:
  DevelopmentVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref CidrBlock
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: !Ref Name
  DevelopmentPublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Ref 'PublicSubnet1CidrBlock'
      AvailabilityZone: !Join ['', [!Ref 'AWS::Region', 'a']]
      MapPublicIpOnLaunch: true
      VpcId: !Ref 'DevelopmentVPC'
      Tags:
        - Key: Name
          Value: !Sub ${Name} Public 1
        - Key: Group
          Value: !Ref Name
  DevelopmentPublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Ref 'PublicSubnet2CidrBlock'
      AvailabilityZone: !Join ['', [!Ref 'AWS::Region', 'a']]
      MapPublicIpOnLaunch: true
      VpcId: !Ref 'DevelopmentVPC'
      Tags:
        - Key: Name
          Value: !Sub ${Name} Public 2
        - Key: Group
          Value: !Ref Name
  DevelopmentPrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Ref 'PrivateSubnet1CidrBlock'
      AvailabilityZone: !Join ['', [!Ref 'AWS::Region', 'a']]
      VpcId: !Ref 'DevelopmentVPC'
      Tags:
        - Key: Name
          Value: !Sub ${Name} Private 1
        - Key: Group
          Value: !Ref Name
  DevelopmentPrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: !Ref 'PrivateSubnet2CidrBlock'
      AvailabilityZone: !Join ['', [!Ref 'AWS::Region', 'a']]
      VpcId: !Ref 'DevelopmentVPC'
      Tags:
        - Key: Name
          Value: !Sub ${Name} Private 2
        - Key: Group
          Value: !Ref Name
  DevelopmentIGW:
    Type: AWS::EC2::InternetGateway
    DependsOn: DevelopmentVPC
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${Name} Internet Gateway
        - Key: Group
          Value: !Ref Name
  DevelopmentIGWAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref DevelopmentVPC
      InternetGatewayId: !Ref DevelopmentIGW
  DevelopmentPublicRoutes:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref 'DevelopmentVPC'
      Tags:
        - Key: Name
          Value: Development Public Routes
        - Key: Group
          Value: Development
  DevelopmentPublicSubnet1Routes:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref 'DevelopmentPublicRoutes'
      SubnetId: !Ref 'DevelopmentPublicSubnet1'
  DevelopmentPublicDefaultRoute:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      RouteTableId: !Ref 'DevelopmentPublicRoutes'
      GatewayId: !Ref 'DevelopmentIGW'
    DependsOn: DevelopmentIGWAttachment
  DevelopmentSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Development Hosts
      VpcId: !Ref 'DevelopmentVPC'
      Tags:
        - Key: Group
          Value: Development
        - Key: Name
          Value: Development Host Security Group
  DevelopmentSGIngressAllowSSH:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref 'DevelopmentSG'
      IpProtocol: tcp
      FromPort: 22
      ToPort: 22
      CidrIp: 0.0.0.0/0
Outputs:
  DevelopmentVPC:
    Description: 'The Development VPC.'
    Value: !Ref DevelopmentVPC
    Export:
      Name: PrimaryVPC
  VpcId:
    Description: Resource ID for the Development VPC.
    Value: !Ref DevelopmentVPC
    Export:
      Name: Development-vpc-id
  VpcCidrBlock:
    Description: CIDR address range for the DevelopmentVPC.
    Value: !GetAtt DevelopmentVPC.CidrBlock
  DevelopmentPublicSubnet1:
    Description: 'public-tier subnet 1'
    Value: !Ref DevelopmentPublicSubnet1
    Export:
      Name: PublicSubnet1
  DevelopmentPrivateSubnet1:
    Description: 'private-tier subnet 1'
    Value: !Ref DevelopmentPrivateSubnet1
    Export:
      Name: PrivateSubnet1
  InternetGatewayId:
    Description: Resource ID for DevelopmentVPC's Internet Gateway.
    Value: !Ref DevelopmentIGW
